--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Apprenez à concevoir des applications sobres et éco-conçu</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;1,100;1,200;1,400&display=swap');
 
@@ -117,6 +118,10 @@
             align-items: center;
             font-size: 1.875rem;
 
+        }
+
+        main {
+            width: 100%;
         }
 
         header a {
@@ -283,7 +288,7 @@
         #program .col-container {
             display: flex;
             margin-right: 8.938rem;
-            flex-wrap: wrap;
+
         }
 
         #program .col {
@@ -564,6 +569,9 @@
         </a>
     </header>
     <main>
+
+
+        <!-- -->
         <section id="title">
             <h1 class="k2d-bold">Apprenez à concevoir des applications <em>sobre</em>
                 et <em>éco-conçu</em></h1>
@@ -816,14 +824,7 @@
 
         <section id="testimonials">
             <h2 class="k2d-semibold">Ils ont sauté le pas</h2>
-            <!--
-            
-                 <ul>
-                <li>SIGAL</li>
-                <li>Algofi</li>
-                <li>Inoco</li>
-            </ul>
-            -->
+
             <article>
                 <div>
                     <img src="assets/clients/Nicolas_PEDEGERT.webp" alt="Nicolas PEDEGERT">
@@ -950,7 +951,7 @@
                 </a>
             </div>
         </section>
-
+        <!-- -->>
 
     </main>
 
