fix zindex header

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             justify-content: space-evenly;
             align-items: center;
             font-size: 1.875rem;
-
+            z-index: 50;
         }
 
         main {
